Add menu shortcut/ some korean menu

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
 {{.Site.Home.Content}}
 {{else}}
 	{{if eq .Site.Language.Lang "kr"}}
-	<h1>한국어랑께</h1>
+	<h1>Hello World!</h1>
 		<p>
 		  The site is working. Don't forget to customize this homepage with your own. You typically have 3 choices :
 		</p>
