--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,27 +6,9 @@
 {{if .Site.Home.Content }}
 {{.Site.Home.Content}}
 {{else}}
-	{{if eq .Site.Language.Lang "kr"}}
-	<h1>Hello World!</h1>
-		<p>
-		  The site is working. Don't forget to customize this homepage with your own. You typically have 3 choices :
-		</p>
-		<ul>
-			<li><b>1. </b> Create an _index.md document in <b>content</b> folder and fill it with Markdown content</li>
-			<li><b>2. </b> Create an <b>index.html</b> file in the <b>static</b> folder and fill the file with HTML content</li>
-		  <li><b>3. </b> Configure your server to automatically redirect home page to one your documentation page</li>
-		</ul>
-		<!-- multi language-->
-	{{else}}
-		<h1>Customize your own home page!!!!!</h1>
-		<p>
-		  The site is working. Don't forget to customize this homepage with your own. You typically have 3 choices :
-		</p>
-		<ul>
-			<li><b>1. </b> Create an _index.md document in <b>content</b> folder and fill it with Markdown content</li>
-			<li><b>2. </b> Create an <b>index.html</b> file in the <b>static</b> folder and fill the file with HTML content</li>
-		  <li><b>3. </b> Configure your server to automatically redirect home page to one your documentation page</li>
-		</ul>
+	{{if eq .Site.Language.Lang "en"}}
+		<h1>Hello World!</h1>
 	{{end}}
+	<img src="https://drive.google.com/uc?id=1vaz4QDCtGAHO8vrVxC4BtPc9nGXuqmvW" width="80%" />
 {{ end }}
 {{ partial "footer.html" . }}
