Change tilte of kr

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,7 @@
 	{{if eq .Site.Language.Lang "en"}}
 		<h1>Hello World!</h1>
 	{{end}}
+	<h1>캐벨로퍼 또는 캐발자</h1>
 	<img src="https://drive.google.com/uc?id=1jnA5oYAoA8Nz0d-Md3PCjNhrAxMSwOLG" width="80%" />
 {{ end }}
 {{ partial "footer.html" . }}
